part3/Exercise_3.02/logoutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stringgeneratorservice
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: stringgenerator
  ports:
    - port: 567
      protocol: TCP
      targetPort: 3012
